--- a/guessing_game/Cargo.toml
+++ b/guessing_game/Cargo.toml
@@ -2,6 +2,9 @@
 name = "guessing_game"
 version = "0.1.0"
 edition = "2021"
+authors = ["Ibuki Shinzato <e235718@ie.u-ryukyu.ac.jp>"]
+discription = "A fun game where you guess what number the computer has chosen."
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 rand = "0.9.0-beta.1"
